gitattributes for conflicting scene files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Unity Smart Merge for YAML-based Unity assets
+*.unity  merge=unityyamlmerge
+*.prefab merge=unityyamlmerge
+*.asset  merge=unityyamlmerge
+*.meta   merge=unityyamlmerge
+ProjectSettings/*.asset merge=unityyamlmerge
